# SecretSentry

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_tests.sh
.github/: secret_scanning.yml
.github/workflows/: claude.yml
fixtures/: test_secrets.py
scripts/: README.md  __init__.py  fix.py  install_hook.py  scan.py  secrets_copy.py  serve.py  verify.py
src/hooks/: pre_commit.py
src/migration/: refactor.py
src/scanner/: entropy.py  git_scanner.py  heuristics.py  patterns.py  scanner.py
src/utils/: config.py  defaults.py  redaction.py  storage.py
tests/: README.md  conftest.py
tests/integration/: test_full_scan.py
tests/unit/: test_entropy.py  test_heuristics.py  test_patterns.py  test_scanner.py
