[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secrets-sentry"
version = "0.1.0"
description = "Replit-native secrets detection and remediation tool"
authors = [{name = "Secrets Sentry Contributors"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "GitPython==3.1.41",
    "jinja2==3.1.3",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "httpx==0.26.0",
    "python-dotenv==1.0.0",
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "playwright==1.41.0",
    "click==8.1.7",
]

[project.scripts]
sentry-scan = "scripts.scan:scan"
sentry-fix = "scripts.fix:fix"
sentry-serve = "scripts.serve:serve"
sentry-hook-install = "scripts.install_hook:install"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
